--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,7 @@ jobs:
       - name: Install yarn
         run: npm install -g yarn
 
-      - uses: c-hive/gha-yarn-cache@v1
-
-      - name: Install JS dependencies
-        run: yarn
+      - name: Run Test
       - run: yarn test
         env:
           FORCE_COLOR: 1
